--- a/simhub_flag.html
+++ b/simhub_flag.html
@@ -5,8 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>IFWL Flag</title>
   <style>
-    html,body{height:100%;margin:0;font-family:system-ui;background:transparent;overflow:hidden}
-    .wrap{height:100%;display:flex;align-items:center;justify-content:center}
+    html,body{
+      height:100%;
+      margin:0;
+      font-family:system-ui;
+      background:transparent;
+      overflow:hidden;
+    }
+
+    .wrap{
+      height:100%;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+    }
+
     .panel{
       width:min(520px, 96vw);
       border-radius:24px;
@@ -18,9 +31,27 @@
       color:#fff;
       box-shadow:0 18px 55px rgba(0,0,0,.55);
     }
-    .big{font-weight:1000;letter-spacing:.6px;font-size: clamp(26px, 4.2vw, 40px);margin:0 0 8px}
-    .sub{margin:0;opacity:.9;font-size: clamp(14px, 2.2vw, 18px);line-height:1.25}
-    .stamp{margin-top:10px;font-family: ui-monospace, Menlo, Consolas, monospace;font-size: 12px;opacity:.85}
+
+    .big{
+      font-weight:1000;
+      letter-spacing:.6px;
+      font-size: clamp(26px, 4.2vw, 40px);
+      margin:0 0 8px
+    }
+
+    .sub{
+      margin:0;
+      opacity:.9;
+      font-size: clamp(14px, 2.2vw, 18px);
+      line-height:1.25
+    }
+
+    .stamp{
+      margin-top:10px;
+      font-family: ui-monospace, Menlo, Consolas, monospace;
+      font-size: 12px;
+      opacity:.85
+    }
 
     @keyframes rfFlash { 0%,49%{background:#000;} 50%,100%{background:#b30000;} }
     @keyframes vscFlash { 0%,49%{background:#000;} 50%,100%{background:#8a5a00;} }
@@ -28,7 +59,15 @@
     body.red { animation: rfFlash .7s infinite; }
     body.vsc { animation: vscFlash .9s infinite; }
 
-    .dot{display:inline-block;width:14px;height:14px;border-radius:999px;margin-right:10px;vertical-align:middle}
+    .dot{
+      display:inline-block;
+      width:14px;
+      height:14px;
+      border-radius:999px;
+      margin-right:10px;
+      vertical-align:middle
+    }
+
     .dot.green{background:#22c55e; box-shadow:0 0 0 6px rgba(34,197,94,.18)}
     .dot.red{background:#ef4444; box-shadow:0 0 0 6px rgba(239,68,68,.18)}
     .dot.yellow{background:#f59e0b; box-shadow:0 0 0 6px rgba(245,158,11,.18)}
@@ -36,161 +75,104 @@
 </head>
 <body>
   <div class="wrap">
-    <div class="panel">
-      <!-- ✅ FIX: split headline text so we never replace the dot element -->
-      <div class="big" id="title">
+    <div class="panel" id="panel">
+      <div class="big">
         <span class="dot green" id="dot"></span>
         <span id="headline">SERVER GOOD : ADHERE TO RACE FLAGS</span>
       </div>
-      <p class="sub" id="msg">Race control : green flag (does not override yellow or blue).</p>
-      <div class="stamp" id="stamp">Last update: —</div>
+      <p class="sub" id="msg"></p>
+      <div class="stamp" id="stamp"></div>
     </div>
   </div>
 
-  <script>
-    // ✅ UPDATED: new Durable Object Worker
-    const WORKER_BASE = "https://ifwl-flag.benjamin-leahy1.workers.dev";
+<script>
+  const WORKER_BASE = "https://ifwl-flag.benjamin-leahy1.workers.dev";
+  const POLL_MS = 750;
 
-    // Poll fallback (used if SSE fails or SimHub blocks EventSource)
-    const POLL_MS = 750;
+  const panel = document.getElementById("panel");
+  const headline = document.getElementById("headline");
+  const msg = document.getElementById("msg");
+  const dot = document.getElementById("dot");
+  const stamp = document.getElementById("stamp");
 
-    const headline = document.getElementById("headline");
-    const msg = document.getElementById("msg");
-    const dot = document.getElementById("dot");
-    const stamp = document.getElementById("stamp");
+  function fmt(ts){
+    try { return new Date(ts).toLocaleTimeString([], {hour:"2-digit", minute:"2-digit", second:"2-digit"}); }
+    catch { return "—"; }
+  }
 
-    function fmt(ts){
-      try { return new Date(ts).toLocaleTimeString([], {hour:"2-digit", minute:"2-digit", second:"2-digit"}); }
-      catch { return "—"; }
+  function setDot(color){
+    dot.className = "dot " + color;
+  }
+
+  function apply(mode, updatedAt){
+
+    // ALWAYS reset animation
+    document.body.classList.remove("red","vsc");
+
+    // ✅ GREEN = FULLY BLANK SCREEN
+    if(mode === "green"){
+      panel.style.display = "none";
+      return;
     }
 
-    // Prefer lastCommand if present (supports "server_reset" without changing UI state)
-    function getEffectiveMode(data){
-      const state = String(data?.state || "green").toLowerCase();
-      const lastCommand = String(data?.lastCommand || "").toLowerCase();
+    // Show panel for everything else
+    panel.style.display = "block";
 
-      if(lastCommand === "server_reset") return "server_reset";
-      if(state === "red") return "red";
-      if(state === "vsc_slow") return "vsc_slow";
-      if(state === "vsc_pit") return "vsc_pit";
-      return "green";
+    if(mode === "red"){
+      document.body.classList.add("red");
+      setDot("red");
+      headline.textContent = "RED FLAG";
+      msg.textContent = "Drive to pits immediately. Send standings screenshot into Discord.";
+    }
+    else if(mode === "vsc_slow"){
+      document.body.classList.add("vsc");
+      setDot("yellow");
+      headline.textContent = "VSC — FORMATION";
+      msg.textContent = "Remain in formation. 1st gear, enable limiter, no overtaking.";
+    }
+    else if(mode === "vsc_pit"){
+      document.body.classList.add("vsc");
+      setDot("yellow");
+      headline.textContent = "VSC — PIT NOW";
+      msg.textContent = "All cars to enter pits now. Keep formation at pit exit line. No overtaking.";
+    }
+    else if(mode === "server_reset"){
+      setDot("green");
+      headline.textContent = "SERVER RESET";
+      msg.textContent = "Practice session is live. You have 15 minutes to re-enter the server.";
     }
 
-    function setDot(color){
-      dot.className = "dot " + color;
-    }
+    stamp.textContent = "Last update: " + (updatedAt ? fmt(updatedAt) : "");
+  }
 
-    function apply(mode, updatedAt){
-      document.body.classList.remove("red","vsc");
+  function getEffectiveMode(data){
+    const state = String(data?.state || "green").toLowerCase();
+    const lastCommand = String(data?.lastCommand || "").toLowerCase();
 
-      if(mode === "red"){
-        document.body.classList.add("red");
-        setDot("red");
-        headline.textContent = "RED FLAG";
-        msg.textContent = "drive to pits immediately. Send standings screenshot into Discord.";
-      }
-      else if(mode === "vsc_slow"){
-        document.body.classList.add("vsc");
-        setDot("yellow");
-        headline.textContent = "VSC — FORMATION";
-        msg.textContent = "Remain in formation. 1st gear, enable limiter, no overtaking.";
-      }
-      else if(mode === "vsc_pit"){
-        document.body.classList.add("vsc");
-        setDot("yellow");
-        headline.textContent = "VSC — PIT NOW";
-        msg.textContent = "all cars to enter pits now. Keep formation at pit exit line. No overtaking.";
-      }
-      else if(mode === "server_reset"){
-        setDot("green");
-        headline.textContent = "SERVER RESET";
-        msg.textContent = "Practice session is now live. You have 15 minutes to organise re-enter to the server — good luck!";
-      }
-      else{
-        setDot("green");
-        headline.textContent = "SERVER GOOD : ADHERE TO RACE FLAGS";
-        msg.textContent = "if shown after a VSC : race leader to resume race pace within 45 seconds.";
-      }
+    if(lastCommand === "server_reset") return "server_reset";
+    if(state === "red") return "red";
+    if(state === "vsc_slow") return "vsc_slow";
+    if(state === "vsc_pit") return "vsc_pit";
+    return "green";
+  }
 
-      stamp.textContent = "Last update: " + (updatedAt ? fmt(updatedAt) : "—");
-    }
-
-    function showOffline(){
-      document.body.classList.remove("red","vsc");
+  async function poll(){
+    try{
+      const res = await fetch(`${WORKER_BASE}/state?t=${Date.now()}`, { cache:"no-store" });
+      if(!res.ok) throw new Error();
+      const data = await res.json();
+      apply(getEffectiveMode(data), data?.updatedAt || null);
+    }catch{
+      panel.style.display = "block";
       setDot("red");
       headline.textContent = "FLAG FEED OFFLINE";
-      msg.textContent = "Cannot reach Race Control state endpoint.";
-      stamp.textContent = "Last update: —";
+      msg.textContent = "Cannot reach Race Control endpoint.";
+      stamp.textContent = "";
     }
+  }
 
-    async function pollOnce(){
-      const res = await fetch(`${WORKER_BASE}/state?t=${Date.now()}`, { cache:"no-store" });
-      if(!res.ok) throw new Error("HTTP " + res.status);
-      return res.json();
-    }
-
-    let pollTimer = null;
-    function startPolling(){
-      if(pollTimer) return;
-
-      const tick = async () => {
-        try{
-          const data = await pollOnce();
-          apply(getEffectiveMode(data), data?.updatedAt || null);
-        }catch{
-          showOffline();
-        }
-      };
-
-      tick();
-      pollTimer = setInterval(tick, POLL_MS);
-    }
-
-    function stopPolling(){
-      if(pollTimer){
-        clearInterval(pollTimer);
-        pollTimer = null;
-      }
-    }
-
-    function startSSE(){
-      try{
-        const es = new EventSource(`${WORKER_BASE}/events?t=${Date.now()}`);
-
-        es.onopen = () => {
-          // When SSE works, we can stop polling
-          stopPolling();
-        };
-
-        es.onmessage = (ev) => {
-          try{
-            const data = JSON.parse(ev.data);
-            apply(getEffectiveMode(data), data?.updatedAt || null);
-          }catch{
-            // ignore
-          }
-        };
-
-        es.onerror = () => {
-          try{ es.close(); }catch{}
-          // If SSE fails (common in embedded browsers), fallback to polling
-          startPolling();
-          // and retry SSE periodically
-          setTimeout(startSSE, 2000);
-        };
-      }catch{
-        startPolling();
-      }
-    }
-
-    // Init: load once, then prefer SSE, fallback to polling
-    pollOnce()
-      .then(data => apply(getEffectiveMode(data), data?.updatedAt || null))
-      .catch(showOffline);
-
-    startSSE();
-    // Also start polling immediately as safety; SSE will stop it if it connects
-    startPolling();
-  </script>
+  poll();
+  setInterval(poll, POLL_MS);
+</script>
 </body>
 </html>
