--- a/ticketportal.html
+++ b/ticketportal.html
@@ -603,7 +603,7 @@
 
   // If you *require* the guild nickname format:
   const REQUIRE_NICK_FORMAT = true;
-  const NICK_REGEX = /^\\[\\d+\\]\\s*-\\s*.+$/; // [18] - Smokey BH92
+  const NICK_REGEX = /^\[\d+\]\s*-\s*.+$/;
 
   // Firebase config
   const firebaseConfig = {
