--- a/teamstest.html
+++ b/teamstest.html
@@ -3,31 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>GTeam 3 – Team Applications</title>
+  <title>GTeam 3 – Team Hub (IFWL)</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="min-h-screen text-white" style="background:#0b0f1a;">
+<body class="min-h-screen text-white relative overflow-x-hidden">
+
+  <!-- IFWL Background -->
+  <div class="fixed inset-0 -z-10">
+    <img src="ifwl_bg.webp" class="w-full h-full object-cover" alt="IFWL Background">
+    <div class="absolute inset-0 bg-black/70"></div>
+  </div>
+
   <div class="max-w-5xl mx-auto p-4 sm:p-6">
 
-    <!-- Header -->
-    <div class="flex items-center justify-between gap-3 mb-6">
-      <div class="flex items-center gap-3">
-        <div class="w-10 h-10 rounded-2xl bg-white/10 flex items-center justify-center font-bold">G3</div>
-        <div>
-          <div class="text-xl font-semibold">GTeam 3 – Team Hub</div>
-          <div class="text-sm text-white/70">Login, view teams, apply to join</div>
-        </div>
-      </div>
+    <!-- IFWL Header -->
+    <div class="flex flex-col items-center text-center mb-10">
+      <img
+        src="ifwl_logo.png"
+        alt="IFWL Logo"
+        class="w-48 sm:w-64 mb-4 drop-shadow-2xl"
+      />
+      <h1 class="text-3xl sm:text-4xl font-bold tracking-wide">GTeam 3 – Team Hub</h1>
+      <p class="text-white/70 mt-2 text-sm sm:text-base">Official IFWL Endurance Event Portal</p>
+    </div>
 
-      <div class="flex items-center gap-2">
-        <button id="btnLogin" class="px-4 py-2 rounded-xl bg-indigo-500 hover:bg-indigo-400 font-semibold">
-          Login with Discord
-        </button>
-        <button id="btnLogout" class="px-4 py-2 rounded-xl bg-white/10 hover:bg-white/15 font-semibold hidden">
-          Logout
-        </button>
-      </div>
+    <!-- Login Buttons Row -->
+    <div class="flex justify-center gap-3 mb-8">
+      <button id="btnLogin" class="px-6 py-3 rounded-xl bg-indigo-500 hover:bg-indigo-400 font-semibold shadow-lg">
+        Login with Discord
+      </button>
+      <button id="btnLogout" class="px-6 py-3 rounded-xl bg-white/10 hover:bg-white/15 font-semibold hidden">
+        Logout
+      </button>
     </div>
 
     <!-- User Card -->
@@ -50,7 +58,7 @@
       <div class="text-sm text-white/70">Click “Login with Discord” to authenticate, then pick a team and submit your application.</div>
     </div>
 
-    <!-- Teams -->
+    <!-- Main Grid -->
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
 
       <!-- Team list -->
@@ -67,7 +75,6 @@
 
         <div id="teamsLoading" class="text-white/70 text-sm">Loading teams…</div>
         <div id="teamsEmpty" class="hidden text-white/70 text-sm">No teams found yet.</div>
-
         <div id="teamsList" class="mt-3 space-y-2"></div>
       </div>
 
@@ -85,8 +92,10 @@
 
         <div class="mb-3">
           <label class="text-sm text-white/70">Optional note to the team leader</label>
-          <textarea id="note" class="mt-1 w-full px-3 py-2 rounded-xl bg-white/10 border border-white/10 outline-none focus:ring-2 focus:ring-indigo-500"
-            rows="3" placeholder="e.g., Preferred stint times, experience level, availability…"></textarea>
+          <textarea id="note"
+            class="mt-1 w-full px-3 py-2 rounded-xl bg-white/10 border border-white/10 outline-none focus:ring-2 focus:ring-indigo-500"
+            rows="3"
+            placeholder="e.g., Preferred stint times, experience level, availability…"></textarea>
         </div>
 
         <button id="btnApply" disabled
@@ -104,6 +113,11 @@
         <div id="appsEmpty" class="text-white/70 text-sm">No applications yet.</div>
         <div id="appsList" class="mt-3 space-y-2"></div>
       </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="mt-10 text-center text-xs text-white/50">
+      IFWL.net • GTeam 3 Team Hub
     </div>
 
   </div>
@@ -177,9 +191,7 @@
     let appsUnsub = null;
 
     // ====== 6) Auth: Discord provider ======
-    // This assumes you configured Discord as an OIDC provider in Firebase Auth.
-    // Common providerId for custom OIDC is "oidc.discord" (but yours may differ).
-    // If your old setup used a different providerId, change it here.
+    // IMPORTANT: If your providerId differs from "oidc.discord", change it here.
     const DISCORD_OIDC_PROVIDER_ID = "oidc.discord";
     const discordProvider = new OAuthProvider(DISCORD_OIDC_PROVIDER_ID);
 
@@ -226,7 +238,7 @@
     function teamRow(team) {
       const div = document.createElement("button");
       div.type = "button";
-      div.className = "w-full text-left p-3 rounded-xl bg-white/10 hover:bg-white/15 border border-white/10";
+      div.className = "w-full text-left p-3 rounded-xl bg-white/10 hover:bg-white/15 border border-white/10 transition";
       div.innerHTML = `
         <div class="flex items-start justify-between gap-3">
           <div>
@@ -251,7 +263,6 @@
 
     // ====== 8) Applications: realtime list for current user ======
     function listenToMyApplications(uid) {
-      // clean up old listener
       if (appsUnsub) appsUnsub();
 
       const qApps = query(
@@ -312,7 +323,6 @@
       }
 
       try {
-        // basic client-side guard: prevent applying to own team
         if (selectedTeamData.leaderUid && selectedTeamData.leaderUid === currentUser.uid) {
           applyMsg.textContent = "You’re already the leader of this team.";
           return;
@@ -346,7 +356,7 @@
       const enabled = !!currentUser && !!selectedTeamData;
       btnApply.disabled = !enabled;
       btnApply.className = enabled
-        ? "w-full px-4 py-3 rounded-xl font-semibold bg-indigo-500 hover:bg-indigo-400"
+        ? "w-full px-4 py-3 rounded-xl font-semibold bg-indigo-500 hover:bg-indigo-400 shadow-lg"
         : "w-full px-4 py-3 rounded-xl font-semibold bg-indigo-500/40 text-white/70 cursor-not-allowed";
     }
 
@@ -379,7 +389,6 @@
       updateApplyButtonState();
     });
 
-    // ====== 11) Helpers ======
     function escapeHtml(str) {
       return String(str || "")
         .replaceAll("&", "&amp;")
