--- a/teamstest.html
+++ b/teamstest.html
@@ -205,7 +205,7 @@
     const REDIRECT_URI = window.location.origin + window.location.pathname;
 
     const REQUIRE_NICK_FORMAT = true;
-    const NICK_REGEX = /^\\[\\s*\\d+\\s*\\]\\s*-\\s*.+$/;
+    const NICK_REGEX = /^\[\s*\d+\s*\]\s*-\s*.+$/i;
 
     const LS_KEY = "ifwl_discord_user";
     function safeStr(v){ return (typeof v === "string" ? v : "").trim(); }
