--- a/teamstest.html
+++ b/teamstest.html
@@ -549,14 +549,15 @@ btnCreateTeam.addEventListener("click", async () => {
         <div class="flex items-start justify-between gap-3">
           <div>
             <div class="font-extrabold">${escapeHtml(team.teamName || "Unnamed Team")}</div>
-            <div class="text-sm text-white/70">Leader: ${escapeHtml(team.leaderName || "Unknown")}</div>
+            <div class="text-sm text-white/70">Leader: ${escapeHtml(team.leaderNick || team.leaderUsername || "Unknown")}</div>
           </div>
           <div class="text-xs px-2 py-1 rounded-full bg-white/10 border border-white/10 text-white/70">Select</div>
         </div>
       `;
       btn.addEventListener("click", () => {
         selectedTeam = team;
-        selectedTeamEl.textContent = `${team.teamName || "Team"} (Leader: ${team.leaderName || "Unknown"})`;
+        const leader = team.leaderNick || team.leaderUsername || "Unknown";
+        selectedTeamEl.textContent = `${team.teamName || "Team"} (Leader: ${leader})`;
         applyMsg.textContent = "";
         setApplyEnabled(requireDiscordOrShowLogin());
       });
