--- a/teamstest.html
+++ b/teamstest.html
@@ -30,7 +30,7 @@
       z-index: -1;
     }
 
-    /* Discord login UI (same style pattern as tickets page) */
+    /* Discord login UI */
     .discord-card {
       border: 1px solid rgba(255,255,255,0.14);
       background: rgba(255,255,255,0.08);
@@ -74,7 +74,7 @@
   <div class="overlay"></div>
 
   <!-- Header -->
-  <div class="max-w-5xl mx-auto px-4 sm:px-6 py-6">
+  <div class="max-w-6xl mx-auto px-4 sm:px-6 py-6">
     <div class="flex flex-col items-center text-center gap-3">
       <a href="https://ifwl.net/" class="inline-flex justify-center">
         <img src="ifwl_logo.png" alt="IFWL Logo" class="w-52 sm:w-72 drop-shadow-2xl">
@@ -98,7 +98,7 @@
       <div class="glass p-5">
         <div class="text-xl font-bold text-center mb-2">Login with Discord</div>
         <div class="text-white/70 text-center text-sm mb-4">
-          You must be logged in to apply to a team.
+          You must be logged in to create a team or apply to join a team.
         </div>
 
         <div class="discord-card">
@@ -111,7 +111,7 @@
 
           <div class="mt-3 text-xs text-white/75 leading-relaxed">
             <strong>Nickname format required:</strong> <code>[drivernumber] - driver name</code><br>
-            Example: <code>[18] - Smokey BH92</code>
+            Example: <code>[ 81 ] - IFWL XSL4Y3RX</code>
           </div>
 
           <div id="discordLoginStatus" class="status"></div>
@@ -122,45 +122,47 @@
     <!-- Main App -->
     <div id="appSection" class="mt-5 hidden">
       <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
-<!-- Create Team -->
-<div class="glass p-5">
-  <div class="flex items-center justify-between gap-2 mb-3">
-    <div>
-      <div class="text-lg font-bold">Create a Team</div>
-      <div class="text-white/70 text-sm">Team captains create their entry here</div>
-    </div>
-  </div>
 
-  <div class="space-y-3">
-    <div>
-      <label class="text-white/70 text-sm">Team name</label>
-      <input id="teamNameInput" type="text"
-        class="mt-1 w-full px-3 py-2 rounded-xl bg-white/10 border border-white/10 outline-none focus:ring-2 focus:ring-emerald-400"
-        placeholder="e.g., Grease Monkey Racing" maxlength="50">
-    </div>
+        <!-- Create Team -->
+        <div class="glass p-5">
+          <div class="flex items-center justify-between gap-2 mb-3">
+            <div>
+              <div class="text-lg font-bold">Create a Team</div>
+              <div class="text-white/70 text-sm">Team captains create their entry here</div>
+            </div>
+          </div>
 
-    <div>
-      <label class="text-white/70 text-sm">Team image (optional URL)</label>
-      <input id="teamImageUrlInput" type="url"
-        class="mt-1 w-full px-3 py-2 rounded-xl bg-white/10 border border-white/10 outline-none focus:ring-2 focus:ring-emerald-400"
-        placeholder="https://... (png/jpg/webp)" maxlength="300">
-      <div class="text-xs text-white/60 mt-1">
-        (We’ll add file upload later — for now use an image URL.)
-      </div>
-    </div>
+          <div class="space-y-3">
+            <div>
+              <label class="text-white/70 text-sm">Team name</label>
+              <input id="teamNameInput" type="text"
+                class="mt-1 w-full px-3 py-2 rounded-xl bg-white/10 border border-white/10 outline-none focus:ring-2 focus:ring-emerald-400"
+                placeholder="e.g., Grease Monkey Racing" maxlength="50">
+            </div>
 
-    <button id="btnCreateTeam"
-      class="w-full px-4 py-3 rounded-xl font-extrabold bg-indigo-500 hover:bg-indigo-400">
-      Create Team
-    </button>
+            <div>
+              <label class="text-white/70 text-sm">Team image (optional URL)</label>
+              <input id="teamImageUrlInput" type="url"
+                class="mt-1 w-full px-3 py-2 rounded-xl bg-white/10 border border-white/10 outline-none focus:ring-2 focus:ring-emerald-400"
+                placeholder="https://... (png/jpg/webp)" maxlength="300">
+              <div class="text-xs text-white/60 mt-1">
+                (We’ll add file upload later — for now use an image URL.)
+              </div>
+            </div>
 
-    <div id="createTeamMsg" class="status"></div>
+            <button id="btnCreateTeam"
+              class="w-full px-4 py-3 rounded-xl font-extrabold bg-indigo-500 hover:bg-indigo-400">
+              Create Team
+            </button>
 
-    <div class="text-xs text-white/60 leading-relaxed">
-      You will become the <strong>Team Leader</strong>. Drivers can then apply to join.
-    </div>
-  </div>
-</div>
+            <div id="createTeamMsg" class="status"></div>
+
+            <div class="text-xs text-white/60 leading-relaxed">
+              You will become the <strong>Team Leader</strong>. Drivers can then apply to join.
+            </div>
+          </div>
+        </div>
+
         <!-- Teams -->
         <div class="glass p-5">
           <div class="flex items-center justify-between gap-2 mb-3">
@@ -225,27 +227,27 @@
     // Firestore (same Firebase project as tickets)
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
     import {
-  getFirestore,
-  collection,
-  addDoc,
-  getDocs,
-  query,
-  where,
-  orderBy,
-  serverTimestamp,
-  limit,
-  doc,
-  setDoc
-} from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+      getFirestore,
+      collection,
+      addDoc,
+      getDocs,
+      query,
+      where,
+      orderBy,
+      serverTimestamp,
+      limit,
+      doc,
+      setDoc
+    } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
     // ==========================================================
-    // DISCORD LOGIN (rtGate Gen2) — copied from tickets system
+    // DISCORD LOGIN (rtGate Gen2) — same as tickets system
     // ==========================================================
     const RTGATE_BASE = "https://rtgate-vdr3uafd2q-nw.a.run.app/rtGate";
     const REDIRECT_URI = window.location.origin + window.location.pathname;
 
     const REQUIRE_NICK_FORMAT = true;
-    const NICK_REGEX = /^\[\s*\d+\s*\]\s*-\s*.+$/i;
+    const NICK_REGEX = /^\[\s*\d+\s*\]\s*-\s*.+$/;
 
     const LS_KEY = "ifwl_discord_user";
     function safeStr(v){ return (typeof v === "string" ? v : "").trim(); }
@@ -255,9 +257,12 @@
       catch { return null; }
     }
     function clearDiscordUser(){ localStorage.removeItem(LS_KEY); }
+
+    // NBSP-proof nickname validation
     function validateNick(nick){
       if (!REQUIRE_NICK_FORMAT) return true;
-      return NICK_REGEX.test(safeStr(nick));
+      const cleaned = String(nick || "").replace(/\u00A0/g, " ").trim();
+      return NICK_REGEX.test(cleaned);
     }
 
     // ==========================================================
@@ -289,28 +294,32 @@
     const discordLoginBtn    = document.getElementById("discordLoginBtn");
     const discordLoginStatus = document.getElementById("discordLoginStatus");
 
-    const btnRefreshTeams = document.getElementById("btnRefreshTeams");
-    const teamsLoading    = document.getElementById("teamsLoading");
-    const teamsEmpty      = document.getElementById("teamsEmpty");
-    const teamsList       = document.getElementById("teamsList");
-
+    // Create team
     const teamNameInput = document.getElementById("teamNameInput");
     const teamImageUrlInput = document.getElementById("teamImageUrlInput");
     const btnCreateTeam = document.getElementById("btnCreateTeam");
     const createTeamMsg = document.getElementById("createTeamMsg");
 
+    // Teams list
+    const btnRefreshTeams = document.getElementById("btnRefreshTeams");
+    const teamsLoading    = document.getElementById("teamsLoading");
+    const teamsEmpty      = document.getElementById("teamsEmpty");
+    const teamsList       = document.getElementById("teamsList");
+
+    // Apply
     const selectedTeamEl = document.getElementById("selectedTeam");
     const noteEl         = document.getElementById("note");
     const btnApply       = document.getElementById("btnApply");
     const applyMsg       = document.getElementById("applyMsg");
 
+    // Applications
     const appsEmpty = document.getElementById("appsEmpty");
     const appsList  = document.getElementById("appsList");
 
     let selectedTeam = null;
 
     // ==========================================================
-    // Discord login flow (rtGate) — copied from tickets system
+    // Discord login flow (rtGate)
     // ==========================================================
     async function startDiscordLogin(){
       discordLoginStatus.textContent = "Opening Discord login…";
@@ -391,88 +400,6 @@
       showLogin();
     });
 
-
-function makeTeamIdFromName(name){
-  return String(name || "")
-    .trim()
-    .toLowerCase()
-    .replace(/\s+/g, "-")
-    .replace(/[^a-z0-9\-]/g, "")
-    .slice(0, 60);
-}
-
-btnCreateTeam.addEventListener("click", async () => {
-  createTeamMsg.className = "status";
-  createTeamMsg.textContent = "";
-
-  if (!requireDiscordOrShowLogin()) return;
-
-  const u = getDiscordUser();
-  const teamName = safeStr(teamNameInput.value).slice(0, 50);
-  const teamImageUrl = safeStr(teamImageUrlInput.value).slice(0, 300);
-
-  if (!teamName) {
-    createTeamMsg.textContent = "Please enter a team name.";
-    createTeamMsg.className = "status error";
-    return;
-  }
-
-  btnCreateTeam.disabled = true;
-  btnCreateTeam.classList.add("opacity-60", "cursor-not-allowed");
-  createTeamMsg.textContent = "Creating team…";
-
-  try {
-    // Create a predictable doc id so duplicates are harder
-    // also include leader id to avoid same-name collisions if you want
-    const baseId = makeTeamIdFromName(teamName);
-    const docId = baseId ? `${baseId}__${u.id}` : `team__${u.id}`;
-
-    const payload = {
-      eventId: EVENT_ID,
-      teamName,
-      teamImageUrl: teamImageUrl || "",
-      leaderDiscordId: safeStr(u.id),
-      leaderNick: safeStr(u.nick),
-      leaderUsername: safeStr(u.username),
-      leaderGlobal: safeStr(u.global),
-
-      // Members list starts with leader
-      drivers: [
-        {
-          discordId: safeStr(u.id),
-          nick: safeStr(u.nick),
-          username: safeStr(u.username),
-          global: safeStr(u.global),
-          role: "leader",
-          joinedAt: null
-        }
-      ],
-
-      createdAt: serverTimestamp(),
-      updatedAt: serverTimestamp()
-    };
-
-    // Use setDoc so docId is deterministic
-    await setDoc(doc(db, "gteam3_teams", docId), payload, { merge: false });
-
-    teamNameInput.value = "";
-    teamImageUrlInput.value = "";
-
-    createTeamMsg.textContent = "Team created! It will appear in the list.";
-    createTeamMsg.className = "status success";
-
-    await loadTeams(); // refresh list
-  } catch (e) {
-    console.error(e);
-    createTeamMsg.textContent = "Could not create team (rules/config). Check console.";
-    createTeamMsg.className = "status error";
-  } finally {
-    btnCreateTeam.disabled = false;
-    btnCreateTeam.classList.remove("opacity-60", "cursor-not-allowed");
-  }
-});
-
-    
     // ==========================================================
     // UI gating
     // ==========================================================
@@ -510,6 +437,87 @@ btnCreateTeam.addEventListener("click", async () => {
     }
 
     // ==========================================================
+    // Create Team
+    // ==========================================================
+    function makeTeamIdFromName(name){
+      return String(name || "")
+        .trim()
+        .toLowerCase()
+        .replace(/\s+/g, "-")
+        .replace(/[^a-z0-9\-]/g, "")
+        .slice(0, 60);
+    }
+
+    btnCreateTeam.addEventListener("click", async () => {
+      createTeamMsg.className = "status";
+      createTeamMsg.textContent = "";
+
+      if (!requireDiscordOrShowLogin()) return;
+
+      const u = getDiscordUser();
+      const teamName = safeStr(teamNameInput.value).slice(0, 50);
+      const teamImageUrl = safeStr(teamImageUrlInput.value).slice(0, 300);
+
+      if (!teamName) {
+        createTeamMsg.textContent = "Please enter a team name.";
+        createTeamMsg.className = "status error";
+        return;
+      }
+
+      btnCreateTeam.disabled = true;
+      btnCreateTeam.classList.add("opacity-60", "cursor-not-allowed");
+      createTeamMsg.textContent = "Creating team…";
+
+      try {
+        const baseId = makeTeamIdFromName(teamName);
+        const docId = baseId ? `${baseId}__${u.id}` : `team__${u.id}`;
+
+        const payload = {
+          eventId: EVENT_ID,
+          teamName,
+          teamImageUrl: teamImageUrl || "",
+
+          leaderDiscordId: safeStr(u.id),
+          leaderNick: safeStr(u.nick),
+          leaderUsername: safeStr(u.username),
+          leaderGlobal: safeStr(u.global),
+
+          // Members list starts with leader (flexible schema)
+          drivers: [
+            {
+              discordId: safeStr(u.id),
+              nick: safeStr(u.nick),
+              username: safeStr(u.username),
+              global: safeStr(u.global),
+              role: "leader",
+              joinedAt: null
+            }
+          ],
+
+          createdAt: serverTimestamp(),
+          updatedAt: serverTimestamp()
+        };
+
+        await setDoc(doc(db, "gteam3_teams", docId), payload, { merge: false });
+
+        teamNameInput.value = "";
+        teamImageUrlInput.value = "";
+
+        createTeamMsg.textContent = "Team created! It will appear in the list.";
+        createTeamMsg.className = "status success";
+
+        await loadTeams();
+      } catch (e) {
+        console.error(e);
+        createTeamMsg.textContent = "Could not create team (rules/config). Check console.";
+        createTeamMsg.className = "status error";
+      } finally {
+        btnCreateTeam.disabled = false;
+        btnCreateTeam.classList.remove("opacity-60", "cursor-not-allowed");
+      }
+    });
+
+    // ==========================================================
     // Teams loading
     // ==========================================================
     async function loadTeams(){
@@ -545,22 +553,26 @@ btnCreateTeam.addEventListener("click", async () => {
       const btn = document.createElement("button");
       btn.type = "button";
       btn.className = "w-full text-left p-3 rounded-xl bg-white/10 hover:bg-white/15 border border-white/10 transition";
+
+      const leader = team.leaderNick || team.leaderUsername || "Unknown";
+
       btn.innerHTML = `
         <div class="flex items-start justify-between gap-3">
           <div>
             <div class="font-extrabold">${escapeHtml(team.teamName || "Unnamed Team")}</div>
-            <div class="text-sm text-white/70">Leader: ${escapeHtml(team.leaderNick || team.leaderUsername || "Unknown")}</div>
+            <div class="text-sm text-white/70">Leader: ${escapeHtml(leader)}</div>
           </div>
           <div class="text-xs px-2 py-1 rounded-full bg-white/10 border border-white/10 text-white/70">Select</div>
         </div>
       `;
+
       btn.addEventListener("click", () => {
         selectedTeam = team;
-        const leader = team.leaderNick || team.leaderUsername || "Unknown";
         selectedTeamEl.textContent = `${team.teamName || "Team"} (Leader: ${leader})`;
         applyMsg.textContent = "";
         setApplyEnabled(requireDiscordOrShowLogin());
       });
+
       return btn;
     }
 
@@ -703,7 +715,7 @@ btnCreateTeam.addEventListener("click", async () => {
       showApp();
       await loadTeams();
       await loadMyApplications();
-      setApplyEnabled(false); // until a team is selected
+      setApplyEnabled(false); // enabled only once a team is selected
     } else {
       showLogin();
     }
