--- a/teamstest.html
+++ b/teamstest.html
@@ -365,13 +365,13 @@
 
         const nick = safeStr(data.nick || data.nickname || data.guildNick || data.displayName || "");
         const userObj = {
-          nick,
-          id: safeStr(data.userId || data.id || ""),
-          username: safeStr(data.username || data.user || ""),
-          global: safeStr(data.globalName || data.global || ""),
+           nick,
+           id: safeStr(data.userId || data.id || ""),
+           username: safeStr(data.username || data.user || ""),
+           global: safeStr(data.globalName || data.global || ""),
+           sessionToken: safeStr(data.sessionToken || ""),   // ✅ ADD THIS
           loggedInAt: Date.now()
-        };
-
+};
         setDiscordUser(userObj);
 
         if (!validateNick(userObj.nick)) {
